# JSphere

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  _extensions  classification_results.md  eval_trick.md  execution.md  jsphere_final_report.qmd  jsphere_midterm_report.qmd  jsphere_proposal.qmd  literature.md  main.bib  notable_apis.md  popular_api_calls_analysis.md  proposal.qmd  rustfmt.toml  sketch.md  table_workaround_filter.lua  youtube_scripts_api_calls_overview.md
.github/workflows/: release-plz.yml  rust.yml
data/: README.md  pyproject.toml
data/src/data/: __init__.py  api_calls.py  script_features.py  script_features2.py  sphere_colors.py  youtube_scripts.py
headless_browser/: .gitignore  .prettierrc  Dockerfile  acron_test.js  browser.js  compose.yaml  entrypoint.sh  helpers.js  input_urls.csv  package.json  pnpm-lock.yaml  rewrite_js.js  run.sh  runGremlins.js  server.js
headless_browser/tests/: acorn_test.js  browser_w_eval.js  rewrite_js_tests.js
headless_browser/tests/scripts_to_rewrite/: desktop_polymer.js  dummy.js  google_crashed_us.js  network.js  rewritten_desktop_polymer.js  rewritten_dummy.js  rewritten_google_crashed_us.js  rewritten_network.js
headless_browser/vv8_eval_test/: .gitignore  index.html  test-vv8.sh
jsphere_vv8_log/: Cargo.toml  youtube_scripts_api_calls_overview1009.md
jsphere_vv8_log/src/: aggregating.rs  evcxr_examples.rs  js_values.rs  lib.rs  log_files.rs  log_records.rs  record_lines.rs  tests.rs
jsphere_vv8_log/src/log_files/: tests.rs
jsphere_vv8_log/src/log_records/: tests.rs
