[project]
name = "data"
version = "0.0.0"
description = "Internal"
authors = [
    { name = "Steven Hé (Sīchàng)", email = "stevensichanghe@gmail.com" },
]
dependencies = ["pandas>=2.2.3", "requests>=2.32.3", "pyarrow>=17.0.0"]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ipython>=8.28.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/data"]
